# htan-model-mappings

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/map-models/: SKILL.md
.claude/skills/migrate-data/: SKILL.md
configs/htan1_to_htan2/: assay.transform.yaml  biospecimen.transform.yaml  clinical.transform.yaml
lookups/: ncit_diagnosis_to_codes.json  uberon_labels_to_codes.json
mappings/htan1_to_htan2/: MAPPING.md  MIGRATION_REPORT.md  assay_fields.sssom.tsv  assay_unmapped_source.sssom.tsv  assay_unmapped_target.sssom.tsv  biospecimen_fields.sssom.tsv  biospecimen_unmapped_source.sssom.tsv  biospecimen_unmapped_target.sssom.tsv  clinical_fields.sssom.tsv  clinical_matched_values.json  clinical_unmapped_source.sssom.tsv  clinical_unmapped_target.sssom.tsv  clinical_unmatched_source_values.json  clinical_unmatched_target_values.json  clinical_values.sssom.tsv
scripts/: build_lookup_tables.py  deterministic_match.py  generate_sssom_tsv.py  map_drug_names.py  migrate.py  normalize_model.py  ols_lookup.py  semantic_value_match.py  validate_mappings.py  validate_transformed.py  value_match.py
tests/: test_deterministic_match.py  test_migrate.py  test_normalize_model.py  test_value_match.py
